# notes-api

./: .env  main.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: auth.py  notes.py
